# social_media_publisher

./: .clean_run_report.json  .gitattributes  .gitignore  20260225_0057  BOUNDARY_GUARDRAILS.md  BOUNDARY_HARDENING_PLAN.md  BUG_AUDIT.md  CLEANUP_AUDIT.md  CLEANUP_CLASSIFICATION.md  COMMAND_ROOT_REFACTOR.md  Cargo.toml  DEAD_CODE_REMOVAL_REPORT.md  EXPECTED_BEHAVIOR_MATRIX.md  FULL_CLEAN_REPORT.md  HARDENING_REPORT.md  LINT_BACKLOG.md  LINT_REVIEW_REPORT.md  POST_CLEANUP_VALIDATION.md  PROPOSED_STRUCTURE.md  README.md  REGRESSION_REPORT.md  SCRIPT_AUTOMATION_INVENTORY.md  SCRIPT_BACKLOG.md  SCRIPT_CANDIDATES.md  SCRIPT_CONSOLIDATION_REVIEW.md  SECURITY.md  SHELL_COMPOSITION_REFACTOR.md  TAURI_BOUNDARY_CLEANUP.md  TEST_MATRIX.md  TRANSPORT_OUTPUT_CONTRACT.md  UI_CONTROL_INVENTORY.md  WORKSPACE_MAINTENANCE.md  _lint_initial.json  _lint_initial.txt  _lint_postfix.json  deploy_git_toolkit.sh  package.json  playwright.config.ts  playwright.runtime.config.ts  pnpm-lock.yaml
.github/workflows/: ci.yml
REview_folder/: 01_rust_runtime_and_db.md  03_tests_and_testkit.md  05_complete_code_review.md  CONCLUSION.md  GUI_Test_Report_v1_Code_Analysis_and_Implementation_Plan.md  Theory of Operation & GUI Feedback.docx
REview_folder/review comments/: Tauri App Code Review & Roadmap.docx  review comments.txt
apps/desktop/: eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
apps/desktop/src-tauri/: Cargo.toml  build.rs  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/isolation/: index.html
apps/desktop/src-tauri/permissions/: default.toml
apps/desktop/src-tauri/permissions/autogenerated/: analyze_and_persist_release_track.toml  analyze_audio_file.toml  catalog_add_library_root.toml  catalog_cancel_ingest_job.toml  catalog_get_ingest_job.toml  catalog_get_track.toml  catalog_import_files.toml  catalog_list_library_roots.toml  catalog_list_tracks.toml  catalog_remove_library_root.toml  catalog_reset_library_data.toml  catalog_scan_root.toml  catalog_update_track_metadata.toml  execute_release.toml  get_playback_context.toml  get_playback_decode_error.toml  get_release_track_analysis.toml  get_report.toml  init_exclusive_device.toml  load_spec.toml  plan_release.toml  publisher_create_draft_from_track.toml  push_track_change_request.toml  qc_get_active_preview_media.toml  qc_get_batch_export_job_status.toml  qc_get_feature_flags.toml  qc_get_preview_session.toml  qc_list_codec_profiles.toml  qc_prepare_preview_session.toml  qc_reveal_blind_x.toml  qc_set_preview_variant.toml  qc_start_batch_export.toml  runtime_emit_test_file_drop.toml  runtime_get_error_log_path.toml  runtime_log_error.toml  runtime_read_error_log_tail.toml  seek_playback_ratio.toml  set_playback_playing.toml  set_playback_queue.toml  set_volume.toml  (+1 more)
apps/desktop/src-tauri/resources/ffmpeg/: README.md
apps/desktop/src-tauri/src/: commands.rs  lib.rs  main.rs  runtime_error_log.rs
apps/desktop/src-tauri/src/commands/: backend_audio_service.rs  backend_video_render_service.rs  catalog.rs  playback.rs  qc.rs  release.rs  runtime_logging.rs  tests.rs  video_render.rs
apps/desktop/src-tauri/src/commands/backend_audio_service/: runtime.rs
apps/desktop/src-tauri/src/commands/backend_audio_service/runtime/: control_plane.rs  decode.rs  render.rs  status.rs
apps/desktop/src-tauri/src/commands/backend_video_render_service/: runtime.rs
apps/desktop/src-tauri/windows/nsis/: hooks.nsh
archives/documentation-legacy/: README.md
archives/reports/: RUNTIME_PATH_BREAK_REPORT.md
archives/review/: REFACTOR_HANDOFF.md
crates/core/: Cargo.toml
crates/core/src/: audio_processor.rs  circuit_breaker.rs  idempotency.rs  lib.rs  models.rs  orchestrator.rs  pipeline.rs  retry.rs  secrets.rs  spec.rs  transport.rs
crates/core/tests/: idempotency.rs  idempotency_properties.rs  mock_pipeline.rs  release_spec.rs  spec_properties.rs
crates/core/tests/snapshots/: release_spec_normalized.json
crates/db/: Cargo.toml
crates/db/migrations/: 0001_initial.sql  0002_run_lock_leases.sql  0003_release_track_analysis.sql  0004_catalog_music_core.sql  0005_catalog_search_fts.sql
crates/db/src/: lib.rs
crates/db/tests/: state_machine.rs
crates/testkit/: Cargo.toml
docs/: GUI_BUTTON_INTENDED_BEHAVIOR.md  THEME_VARIANTS_GUIDE.md  architecture.md  cleanup-summary.md  conventions.md  features.md  folder-structure.md
docs/architecture/: BOUNDARY_RULES.md  COUPLING_HOTSPOTS.md  IMPORT_POLICY.md  SYSTEM_MODULE_MAP.md  TARGET_BOUNDARY_ARCHITECTURE.md
docs/contracts/: CONTRACT_GAP_ANALYSIS.md  CONTRACT_REVIEW.md  CONTRACT_VERIFICATION_PLAN.md  HARDENED_MODULE_CONTRACTS.md  MODULE_CONTRACT_CATALOG.md
docs/refactor/: FILE_MOVEMENT_MAP.md  FIRST_WAVE_REFACTOR_LOG.md
docs/reports/: ARCHITECTURE_AUDIT.md  (+3 more)
documentation/: README.md
git-toolkit/: branch-exp.sh  checkout.sh  commit.sh  diff-stat.sh  help.sh  log.sh  merge.sh  publish.sh  pull.sh  push.sh  stash-pop.sh  stash.sh  status.sh  sync-main.sh  undo-soft.sh
requirements/: 2026-02-26-rauversion-qc-ui-gap-analysis-and-plan.md  Studio-Release-Orchestrator_ Architectural Blueprint and Implementation Plan - Google Dokument.txt
review/: CLEANUP_REPORT.md  WORKSPACE_REVIEW.md  code_review.md  pre_publish_hardening_plan.md
scripts/: bootstrap-windows.ps1  build-package-windows.ps1  check-boundaries.ps1  check-boundaries.sh  clean-workspace.ps1  clean-workspace.sh  snapshot-baseline.ps1  validate-frontend.ps1  validate-frontend.sh  validate-release-windows.ps1  video-render-preinstaller-smoke.sh
(+292 files in other folders)
