[package]
name = "release-publisher-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow.workspace = true
async-trait.workspace = true
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
sha2.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
reqwest.workspace = true
release-publisher-db = { path = "../db" }
uuid.workspace = true

[dev-dependencies]
proptest = "1.6"
release-publisher-mock-connector = { path = "../connectors/mock" }
tempfile = "3"
