[package]
name = "release-publisher-desktop"
version = "0.2.0"
edition = "2021"

[lib]
name = "release_publisher_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = ["isolation", "protocol-asset"] }
tauri-plugin-dialog = "2"
crossbeam-queue = "0.3"
release-publisher-core = { path = "../../../crates/core" }
release-publisher-db = { path = "../../../crates/db" }
release-publisher-mock-connector = { path = "../../../crates/connectors/mock" }

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_System_Com"] }

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dev-dependencies]
tempfile = "3"
sqlx.workspace = true
