[package]
name = "release-publisher-desktop"
version = "0.2.0"
edition = "2021"
autobins = false
default-run = "Skald"

[[bin]]
name = "Skald"
path = "src/main.rs"

[lib]
name = "release_publisher_desktop_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
serde_yaml.workspace = true
tokio.workspace = true
chrono.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
tauri = { version = "2", features = ["isolation", "protocol-asset"] }
tauri-plugin-dialog = "2"
crossbeam-queue = "0.3"
symphonia = { version = "0.5", default-features = false, features = ["all"] }
release-publisher-core = { path = "../../../crates/core" }
release-publisher-db = { path = "../../../crates/db" }
release-publisher-mock-connector = { path = "../../../crates/connectors/mock" }
rubato = "0.14"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = ["Win32_Media_Audio", "Win32_System_Com"] }

[build-dependencies]
tauri-build = { version = "2", features = ["isolation"] }

[dev-dependencies]
tempfile = "3"
sqlx.workspace = true


